# gof-design-patterns-python

./: .gitignore  pyproject.toml
04_factory_method/item_factory/: main.py  pyproject.toml
04_factory_method/item_factory/src/: main.py
04_factory_method/item_factory/src/client/: client.py
04_factory_method/item_factory/src/factories/: base.py  furniture_factory.py  toy_factory.py
04_factory_method/item_factory/src/items/: base.py  furniture.py  toy.py
04_factory_method/item_factory/tests/: conftest.py  test_client.py  test_factories.py
10_strategy/payment/: README.md  pyproject.toml
10_strategy/payment/diagrams/: class.puml
10_strategy/payment/src/: models.py
10_strategy/payment/src/strategy/: base.py  bitcoin.py  credit_card.py  paypal.py
10_strategy/payment/tests/: test_payment.py
19_state/atm/: README.md  pyproject.toml
19_state/atm/diagrams/: class.puml  state_machine.puml
19_state/atm/src/: main.py
19_state/atm/src/atm/: context.py  exceptions.py  models.py  states.py
19_state/atm/tests/: conftest.py  test_atm.py
state/atm/: README.md  context.py  state_machine.puml  states.py  test_atm.py
strategy/payment/: README.md  cart.py  class.puml  payments.py  test_payment.py
