[project]
name = "gof-design-patterns-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9.2"]

[dependency-groups]
dev = ["pytest-mock>=3.14.0", "pytest>=8.3.3"]

# [tool.pytest.ini_options]
# testpaths = ["tests"]
