[project]
name = "atm"
version = "0.1.0"
description = "ATM Simulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic>=2.11.7"]

[dependency-groups]
dev = ["pytest>=8.4.1"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
